Initial code v2
	* Added programs that can be used for testing (Kodi, evtest)

Initial code
	* Not really working
	* Try "echo 8f07005e 015e01f4 01000000 | sc-test-cmsg.py" to check
	* sc-xbox.py start *should* start emulating the 360 controller.Initial
	  code