@@ -1,7 +1,7 @@
 pkgbase = python-steamcontroller-git
 	pkgdesc = Standalone userland driver for the Steam controller
-	pkgver = 6ab9f2a
-	pkgrel = 2
+	pkgver = f70b7ea
+	pkgrel = 1
 	url = https://github.com/ynsta/steamcontroller
 	install = steamcontroller.install
 	changelog = changelog.txt
@@ -13,8 +13,6 @@ pkgbase = python-steamcontroller-git
 	optdepends = steamcontroller-udev: Required to have the controller recognized
 	optdepends = python-pyside: Required for sc-gyro-plot.py
 	optdepends = python-pyqtgraph: Required for sc-gyro-plot.py
-	optdepends = kodi: Can use xbox controller
-	optdepends = evtest: Can test xbox controller settings
 	provides = steamcontroller
 	conflicts = steamcontroller
 	conflicts = steamcontroller-udev
